--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "@awesome-cordova-library/vibration": "^1.0.2",
+    "@awesome-cordova-plugins/flashlight": "^6.16.0",
+    "@awesome-cordova-plugins/vibration": "^6.16.0",
     "@capacitor/android": "^7.2.0",
     "@capacitor/app": "7.0.1",
     "@capacitor/core": "^7.2.0",
@@ -29,6 +32,8 @@
     "@capacitor/keyboard": "7.0.1",
     "@capacitor/status-bar": "7.0.1",
     "@ionic/angular": "^8.0.0",
+    "cordova-plugin-flashlight": "^3.2.0",
+    "cordova-plugin-vibration": "^3.1.1",
     "firebase": "^11.6.0",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
