--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "cordova-plugin-vibration": "^3.1.1",
     "firebase": "^11.6.0",
     "ionicons": "^7.0.0",
+    "lottie-web": "^5.12.2",
+    "ngx-lottie": "^13.0.1",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.19.1",
     "tslib": "^2.3.0",
